Fixing minor spacing issue in hero section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -784,7 +784,7 @@ p {
 .hero-section {
   position: relative;
   z-index: 1;
-  padding: 160px 0 50px;
+  padding: 140px 0 50px;
   background-image: url("../img/hero/hero-bg.svg");
   background-position: top center;
   background-repeat: no-repeat;
